# PascalObjectDetection

./: CMakeLists.txt  Common.h  Detection.cpp  Detection.h  Feature.cpp  Feature.h  FileIO.cpp  FileIO.h  GUIController.cpp  ImageDatabase.cpp  ImageDatabase.h  ObjectDetector.cpp  ObjectDetector.h  ParametersMap.cpp  ParametersMap.h  PascalAnnotation.h  PascalImageDatabase.cpp  PascalImageDatabase.h  PrecisionRecall.cpp  PrecisionRecall.h  PrincipalComponentAnalysis.cpp  PrincipalComponentAnalysis.h  README.md  SupportVectorMachine.cpp  SupportVectorMachine.h  main.cpp  plot_cmp.m  plot_pca.m  plot_pr.m  svm.config  train.sh
